# backend/docs/swagger.yaml
@@ -85,9 +85,6 @@ definitions:
       operative_Name:
         description: OperativeName holds the value of the "operative_Name" field.
         type: string
-      operative_Type:
-        description: OperativeType holds the value of the "operative_Type" field.
-        type: string
     type: object
   ent.OperativeEdges:
     properties:
@@ -142,9 +139,6 @@ definitions:
     type: object
   ent.Tool:
     properties:
-      Tool_Amount:
-        description: ToolAmount holds the value of the "Tool_Amount" field.
-        type: string
       Tool_Name:
         description: ToolName holds the value of the "Tool_Name" field.
         type: string
